# atlas-local-lib

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-3RD-PARTY.txt  README.md  about.hbs  about.toml  cliff.toml  deny.toml  lcov.info  license.html
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-approve.yml  prepare-release.yml  release.yml  security-audit.yml
examples/: container_lifecycle.rs  create_deployment.rs  create_deployment_with_progress.rs  delete_deployments.rs  get_connection_string.rs  get_deployment_id.rs  get_logs.rs  list_deployments.rs
src/: docker.rs  lib.rs  mongodb.rs  test_utils.rs
src/client/: create_deployment.rs  delete_deployment.rs  get_connection_string.rs  get_deployment.rs  get_deployment_id.rs  get_logs.rs  get_mongodb_secret.rs  list_deployments.rs  mod.rs  pause_deployment.rs  pull_image.rs  start_deployment.rs  stop_deployment.rs  unpause_deployment.rs  watch_deployment.rs
src/client/create_deployment/: mod.rs  progress.rs
src/models/: container_health_status.rs  create_deployment_options.rs  creation_source.rs  deployment.rs  environment_variables.rs  get_connection_string_options.rs  image_tag.rs  labels.rs  log_output.rs  log_output_stream.rs  logs_options.rs  mdb_version.rs  mod.rs  mongodb_type.rs  port_binding.rs  state.rs  watch_options.rs
tests/: e2e.rs  e2e_test.rs  e2e_test_create.rs  e2e_test_delete.rs  e2e_test_list.rs  e2e_test_utils.rs
