[package]
name = "atlas-local"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "A library for managing MongoDB Atlas local environments."
authors = [
    "Jeroen Vervaeke",
    "Luke Sanderson",
    "Melanija Cvetic"
]
repository = "https://github.com/mongodb/atlas-local-lib"
documentation = "https://docs.rs/atlas-local"
rust-version = "1.89"
keywords = ["mongodb", "atlas", "docker", "database", "local"]
categories = ["database", "development-tools"]

include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "LICENSE-3RD-PARTY.txt",
]

[features]
e2e-tests = []

[dependencies]
bollard = "0.19.4"
futures-util = "0.3.31"
maplit = "1.0.2"
rand = "0.9.2"
semver = "1.0.27"
thiserror = "2.0.17"
tokio = { version = "1.48", features = ["time"] }

[dev-dependencies]
anyhow = "1.0.100"
mockall = "0.14.0"
pretty_assertions = "1.4.1"
tokio = { version = "1.48", features = ["full"] }
