[package]
name = "atlas-local"
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
description = "A library for managing MongoDB Atlas local environments."
authors = [
    "Jeroen Vervaeke",
    "Luke Sanderson",
    "Melanija Cvetic"
]
repository = "https://github.com/mongodb/atlas-local-lib"
documentation = "https://docs.rs/atlas-local"
rust-version = "1.89"
keywords = ["mongodb", "atlas", "docker", "database", "local"]
categories = ["database", "development-tools"]

include = [
    "src/**",
    "examples/**",
    "Cargo.toml",
    "README.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "LICENSE-3RD-PARTY.txt",
]

[features]
default = ["serde"]
e2e-tests = []
serde = ["dep:serde", "semver/serde"]

[dependencies]
bollard = "0.20.1"
bytes = "1.11"
chrono = "0.4.43"
futures = "0.3.31"
futures-util = "0.3.31"
maplit = "1.0.2"
rand = "0.9.2"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"], optional = true }
thiserror = "2.0.18"
tokio = { version = "1.49", features = ["time"] }
typed-builder = "0.23.2"

[dev-dependencies]
anyhow = "1.0.101"
mockall = "0.14.0"
pretty_assertions = "1.4.1"
serde_json = "1.0.149"
tokio = { version = "1.49", features = ["full"] }
